--- a/snuev-ios/Login/Login.storyboard
+++ b/snuev-ios/Login/Login.storyboard
@@ -417,9 +417,91 @@
             </objects>
             <point key="canvasLocation" x="1325.5999999999999" y="217.24137931034485"/>
         </scene>
+        <!--Search Department View Controller-->
+        <scene sceneID="rCP-Y8-hpi">
+            <objects>
+                <viewController storyboardIdentifier="SearchDepartmentViewController" id="A6q-GN-wGZ" customClass="SearchDepartmentViewController" customModule="snuev_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FX0-n4-mOj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gDe-ih-Hqe">
+                                <rect key="frame" x="0.0" y="20" width="375" height="100"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-logo-110-px.png" translatesAutoresizingMaskIntoConstraints="NO" id="qfr-Cx-e8z">
+                                        <rect key="frame" x="20" y="5" width="110" height="30"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W4Y-OL-82w">
+                                        <rect key="frame" x="20" y="45" width="335" height="55"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4IA-le-8YR">
+                                                <rect key="frame" x="40" y="21.5" width="8" height="17"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-search-30-px.png" translatesAutoresizingMaskIntoConstraints="NO" id="1NC-N1-Rz2">
+                                                <rect key="frame" x="0.0" y="15" width="30" height="30"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="4IA-le-8YR" firstAttribute="leading" secondItem="1NC-N1-Rz2" secondAttribute="trailing" constant="10" id="AT2-Bd-ICN"/>
+                                            <constraint firstItem="1NC-N1-Rz2" firstAttribute="leading" secondItem="W4Y-OL-82w" secondAttribute="leading" id="Hbm-hp-jt4"/>
+                                            <constraint firstItem="4IA-le-8YR" firstAttribute="centerY" secondItem="1NC-N1-Rz2" secondAttribute="centerY" id="f74-VG-R2V"/>
+                                            <constraint firstAttribute="bottom" secondItem="1NC-N1-Rz2" secondAttribute="bottom" constant="10" id="fNG-88-spQ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="W4Y-OL-82w" firstAttribute="top" secondItem="qfr-Cx-e8z" secondAttribute="bottom" constant="10" id="24k-DH-fdQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="W4Y-OL-82w" secondAttribute="bottom" id="67c-6Z-Ifo"/>
+                                    <constraint firstAttribute="trailing" secondItem="W4Y-OL-82w" secondAttribute="trailing" constant="20" id="LFG-t1-urK"/>
+                                    <constraint firstAttribute="height" constant="100" id="ZMe-3s-lqj"/>
+                                    <constraint firstItem="qfr-Cx-e8z" firstAttribute="top" secondItem="gDe-ih-Hqe" secondAttribute="top" constant="5" id="cCi-iZ-Oj7"/>
+                                    <constraint firstItem="qfr-Cx-e8z" firstAttribute="leading" secondItem="gDe-ih-Hqe" secondAttribute="leading" constant="20" id="ixA-tY-8sC"/>
+                                    <constraint firstItem="W4Y-OL-82w" firstAttribute="leading" secondItem="gDe-ih-Hqe" secondAttribute="leading" constant="20" id="j8T-JW-FOr"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eml-cH-L1E">
+                                <rect key="frame" x="0.0" y="128" width="375" height="539"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="vEy-cr-7BM">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vEy-cr-7BM" id="LyS-ZQ-SvO">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gDe-ih-Hqe" firstAttribute="leading" secondItem="aJN-Xa-2ap" secondAttribute="leading" id="S59-Sa-nmp"/>
+                            <constraint firstItem="gDe-ih-Hqe" firstAttribute="top" secondItem="aJN-Xa-2ap" secondAttribute="top" id="kPb-wd-b6S"/>
+                            <constraint firstItem="aJN-Xa-2ap" firstAttribute="trailing" secondItem="gDe-ih-Hqe" secondAttribute="trailing" id="oi6-cq-4Rs"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="aJN-Xa-2ap"/>
+                    </view>
+                    <connections>
+                        <outlet property="searchQuery" destination="4IA-le-8YR" id="YD1-Ib-0dq"/>
+                        <outlet property="tableView" destination="eml-cH-L1E" id="dCC-cU-NTw"/>
+                        <outlet property="viewHeader" destination="gDe-ih-Hqe" id="5CM-1N-Wdc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XyH-Sx-WbV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2053.5999999999999" y="217.24137931034485"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ic-search-30-px.png" width="30" height="30"/>
+        <image name="img-logo-110-px.png" width="110" height="30"/>
         <image name="img-logo-220-px.png" width="220" height="60"/>
         <image name="img-signup.png" width="108" height="108"/>
     </resources>
